--- a/install
+++ b/install
@@ -23,12 +23,9 @@ sudo cp ./.gitignore_global ~/.gitignore_global
 echo "installing nvm, node"
 git clone https://github.com/creationix/nvm.git ~/.nvm
 original_dir=$(pwd)
-alias go_nvm="cd ~/.nvm"
-go_nvm
-git checkout v0.33.6
+cd ~/.nvm
 . nvm.sh
-alias go_original_dir="cd $original_dir"
-go_original_dir
+cd $original_dir
 source ~/.bashrc
 nvm install node
 nvm use node
