--- a/install
+++ b/install
@@ -4,13 +4,16 @@ echo "updating package lists"
 sudo apt-get update
 
 if [[ "$OSTYPE" == "darwin"* ]]; then
-  echo "installing brew, tmux"
+  echo "installing brew, tmux, ripgrep"
   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
   brew cask install iterm2
   brew install tmux
+  brew install ripgrep
 elif [[ "$OSTYPE" == "linux-gnu"* ]]; then
-  echo "installing tmux"
+  echo "installing tmux, ripgrep"
   sudo apt-get install tmux
+  sudo chmod +x ./rg
+  sudo cp ./rg /usr/local/bin/rg
 fi
 
 echo "installing vim, xclip"
@@ -18,8 +21,6 @@ sudo apt-get install vim
 sudo apt-get install xclip
 
 echo "installing ripgrep, fzf"
-sudo chmod +x ./rg
-sudo cp ./rg /usr/local/bin/rg
 sudo chmod +x ./fzf
 sudo cp ./fzf /usr/local/bin/fzf
 echo "copying vim, tmux, bash, git config"
