--- a/install
+++ b/install
@@ -33,9 +33,18 @@ echo "copying vim, tmux, bash, git config"
 sudo cp ./.vimrc ~/.vimrc
 sudo cp ./.tmux.conf ~/.tmux.conf
 sudo cp ./.tmux.conf.local ~/.tmux.conf.local
+sudo cp ./.terminal-config-cross-platform ~/.terminal-config-cross-platform
 sudo cp ./.bashrc ~/.bashrc
 sudo cp ./.gitconfig ~/.gitconfig
 sudo cp ./.gitignore_global ~/.gitignore_global
+
+echo "installing pipx, debian for now"
+sudo apt-get install python3-pip
+python3 -m pip install --user pipx
+python3 -m pipx ensurepath
+source ~/.bashrc
+pipx install black
+pipx install isort
 
 echo "installing nvm, node"
 git clone https://github.com/creationix/nvm.git ~/.nvm
