--- a/install
+++ b/install
@@ -75,11 +75,11 @@ sudo cp ./.vimrc ~/.vimrc
 sudo cp ./.tmux.conf ~/.tmux.conf
 sudo cp ./.tmux.conf.local ~/.tmux.conf.local
 sudo cp ./.terminal-config-cross-platform ~/.terminal-config-cross-platform
-if [[ $OS == "linux" ]]; then
-  if [[ $DISTRO == "ubuntu" ]]; then
+# if [[ $OS == "linux" ]]; then
+  # if [[ $DISTRO == "ubuntu" ]]; then
     # sudo cp ./.bashrc ~/.bashrc
-  fi
-fi
+  # fi
+# fi
 sudo cp ./.gitconfig ~/.gitconfig
 sudo cp ./.gitignore_global ~/.gitignore_global
 
@@ -91,6 +91,7 @@ if [[ $OS == "linux" ]]; then
     sudo systemctl start docker
     sudo systemctl enable docker
   else
+    sudo apt-get install python3-venv
     sudo apt-get install python3-pip
     sudo apt-get install docker
   fi
