--- a/install
+++ b/install
@@ -77,19 +77,27 @@ sudo cp ./.tmux.conf.local ~/.tmux.conf.local
 sudo cp ./.terminal-config-cross-platform ~/.terminal-config-cross-platform
 if [[ $OS == "linux" ]]; then
   if [[ $DISTRO == "ubuntu" ]]; then
-    sudo cp ./.bashrc ~/.bashrc
+    # sudo cp ./.bashrc ~/.bashrc
   fi
 fi
 sudo cp ./.gitconfig ~/.gitconfig
 sudo cp ./.gitignore_global ~/.gitignore_global
 
 if [[ $OS == "linux" ]]; then
-  echo "installing pipx, linux for now"
+  echo "installing pipx, docker, linux for now"
   if [[ $DISTRO = "manjaro" ]]; then
     sudo pamac install python3-pip
+    sudo pamac install docker
+    sudo systemctl start docker
+    sudo systemctl enable docker
   else
     sudo apt-get install python3-pip
+    sudo apt-get install docker
   fi
+  sudo curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  sudo chmod +x /usr/local/bin/docker-compose
+  sudo groupadd docker
+  sudo usermod -aG docker $USER
   python3 -m pip install --user pipx
   python3 -m pipx ensurepath
   source ~/.bashrc
