--- a/install
+++ b/install
@@ -105,11 +105,7 @@ if [[ $OS == "linux" ]]; then
 fi
 
 echo "installing nvm, node"
-git clone https://github.com/creationix/nvm.git ~/.nvm
-original_dir=$(pwd)
-cd ~/.nvm
-. nvm.sh
-cd $original_dir
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
 source ~/.bashrc
 nvm install node
 nvm use node
