Actually copy the contents

--- a/install
+++ b/install
@@ -75,7 +75,7 @@ sudo cp ./.vimrc ~/.vimrc
 sudo cp ./.tmux.conf ~/.tmux.conf
 sudo cp ./.tmux.conf.local ~/.tmux.conf.local
 sudo cp ./.terminal-config-cross-platform ~/.terminal-config-cross-platform
-cat ./.bashrc ~/.bashrc
+cat ./.bashrc >> ~/.bashrc
 sudo cp ./.gitconfig ~/.gitconfig
 sudo cp ./.gitignore_global ~/.gitignore_global
 
